deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weaviate
  labels:
    name: weaviate
    app: weaviate
    app.kubernetes.io/name: weaviate
    namespace: data-bisgpt-dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: weaviate
  template:
    metadata:
      labels:
        app: weaviate
        app.kubernetes.io/name: weaviate
    spec:
      volumes:
      - name: "weaviate-data"
        persistentVolumeClaim:
          claimName: "weaviate-data"
      containers:
      - name: weaviate
        image: nexus.bisinfo.org:8099/semitechnologies/weaviate:1.24.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: "/var/lib/weaviate"
            name: "weaviate-data"
