service.yml
apiVersion: v1
kind: Service
metadata:
  name: weaviate
  labels:
    app.kubernetes.io/name: weaviate
spec:
  selector:
    app: weaviate
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: weaviate-grpc
  labels:
    app.kubernetes.io/name: weaviate-grpc
spec:
  selector:
    app: weaviate
  ports:
    - name: grpc
      protocol: TCP
      port: 5051
      targetPort: 5051
