route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: weaviate
  name: weaviate
  namespace: data-bisgpt-dev
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: weaviate
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: weaviate-grpc
  name: weaviate-grpc
  namespace: data-bisgpt-dev
spec:
  port:
    targetPort: grpc
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: weaviate-grpc
    weight: 100
  wildcardPolicy: None
